[project]
name = "classtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hyacine", email = "zhengyy0621@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
